--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "cakephp/cakephp": "^4.3",
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "ext-openssl": "*",
+        "ext-calendar": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "cakephp/bake": "^2.6",
